--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "description": "GoCo Student: An Ionic project",
   "dependencies": {
+    "bufferstreams": "0.0.2",
+    "clean-css": "^3.0.9",
     "gulp": "^3.5.6",
-    "gulp-sass": "^0.7.1",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^0.7.1",
+    "memory-cache": "0.0.5",
+    "through2": "^0.6.3",
+    "vinyl-sourcemaps-apply": "^0.1.4"
   },
   "devDependencies": {
     "bower": "^1.3.3",
