Add StatusBar plugin to package.json

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "cordovaPlugins": [
     "com.google.cordova.admob",
-    "org.apache.cordova.inappbrowser"
+    "org.apache.cordova.inappbrowser",
+    "org.apache.cordova.statusbar"
   ]
 }
