--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "gulp-ruby-sass": "^1.0.5",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
   },
