Add Cordova Crosswalk plugin (resolves #39)

--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   },
   "cordovaPlugins": [
     "org.apache.cordova.inappbrowser",
-    "https://github.com/danwilson/google-analytics-plugin.git"
+    "https://github.com/danwilson/google-analytics-plugin.git",
+    "./engine/cordova-crosswalk-engine-c0.7.1",
+    "org.apache.cordova.splashscreen",
+    "https://github.com/apache/cordova-plugin-whitelist.git"
   ],
   "cordovaPlatforms": [
-    "android",
     "ios"
   ]
 }
