--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goco-student",
-  "version": "2.11.3",
+  "version": "2.3",
   "description": "GoCo Student: An Ionic project",
   "dependencies": {
     "bufferstreams": "0.0.2",
@@ -32,7 +32,9 @@
       "id": "cordova-plugin-whitelist"
     },
     "com.ionic.keyboard",
-    "cordova-plugin-crosswalk-webview"
+    "cordova-plugin-crosswalk-webview",
+    "cordova-plugin-whitelist",
+    "cordova-plugin-splashscreen"
   ],
   "cordovaPlatforms": [
     "wp8",
