--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goco-student",
-  "version": "2.4",
+  "version": "2.4.0",
   "description": "GoCo Student: An Ionic project",
   "dependencies": {
     "bufferstreams": "0.0.2",
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-ruby-sass": "^1.0.5",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
