--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-cssnano": "^2.0.0",
     "gulp-ruby-sass": "^1.0.5",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
