--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "twemoji": "~1.4.1",
     "angular-twemoji": "~0.0.8",
-    "ngCordova": "~0.1.23-alpha"
+    "lawnchair": "~0.6.4"
   },
   "resolutions": {
     "angular-sanitize": "1.4.3",
