--- a/www/lib/ionic/bower.json
+++ b/www/lib/ionic/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "ionic",
-  "version": "1.2.4-nightly-1917",
-  "codename": "",
+  "version": "1.3.0",
+  "codename": "delhi",
   "homepage": "https://github.com/driftyco/ionic",
   "authors": [
     "Max Lynch <max@drifty.com>",
