Change package versions to exact and remove unused

--- a/package.json
+++ b/package.json
@@ -9,22 +9,15 @@
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
-    "bower": "latest",
-    "bufferstreams": "latest",
-    "clean-css": "latest",
-    "gulp": "latest",
-    "gulp-autoprefixer": "latest",
-    "gulp-clean-css": "latest",
-    "gulp-concat": "latest",
-    "gulp-cssnano": "latest",
-    "gulp-rename": "latest",
-    "gulp-sass": "latest",
-    "gulp-sourcemaps": "latest",
-    "gulp-util": "latest",
-    "memory-cache": "latest",
-    "shelljs": "latest",
-    "through2": "latest",
-    "vinyl-sourcemaps-apply": "latest"
+    "bower": "1.7.9",
+    "gulp": "3.9.1",
+    "gulp-autoprefixer": "3.1.0",
+    "gulp-clean-css": "2.0.10",
+    "gulp-concat": "2.6.0",
+    "gulp-cssnano": "2.1.2",
+    "gulp-rename": "1.2.2",
+    "gulp-sass": "2.3.2",
+    "gulp-sourcemaps": "1.6.0"
   },
   "cordovaPlugins": [
     "org.apache.cordova.inappbrowser",
