Update Ionic lib to 1.3.2

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "GoCo Student",
+  "name": "goco-student",
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#latest"
