--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
       "locator": "https://github.com/apache/cordova-plugin-whitelist.git",
       "id": "cordova-plugin-whitelist"
     },
-    "com.ionic.keyboard",
     "cordova-plugin-crosswalk-webview",
-    "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
-    "https://github.com/litehelpers/Cordova-sqlite-storage.git"
+    "https://github.com/litehelpers/Cordova-sqlite-storage.git",
+    "ionic-plugin-keyboard",
+    "cordova-plugin-whitelist"
   ],
   "cordovaPlatforms": [
     "ios",
